tests/ui/fail/bad_nesting_1.stderr
error: the matcher defines one repetition (`?`) for a but the transcriber uses no repetition
 --> tests/ui/fail/bad_nesting_1.rs:5:10
  |
5 |         $a
  |          ^
